[gd_scene load_steps=4 format=3 uid="uid://xewvogyx2vkw"]

[ext_resource type="Script" path="res://scenes/ui/score_submission.gd" id="1_04jyq"]
[ext_resource type="Texture2D" uid="uid://8l50mx5yabwc" path="res://assets/backgrounds/GameOverVoll-Man.jpg" id="2_eend0"]

[sub_resource type="LabelSettings" id="LabelSettings_4lwcj"]

[node name="ScoreSubmission" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_04jyq")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_eend0")
expand_mode = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_4lwcj")

[node name="NameInput" type="LineEdit" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Submit Score"
